Fix for lighthouse flag on introduction image that was applied as background image instead HTML element <img>, new images uploaded and replaced the old ones with new webp format

--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
     <header class="header">
         <div class="header__logo">
             <a href="index.html" class="header__home">
-                <img class="header__image" src="./assets/images/icon.png"
+                <img class="header__image" src="./assets/images/icon.webp"
                     alt="website's icon, Sao Paulo's city shape in black">
                 <h1 class="header__title">Paulista Dishes</h1>
             </a>
