--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header class="header">
         <div class="header__logo">
             <a href="index.html" class="header__home">
-                <img class="header__image" src="./assets/images/icon.png"
+                <img class="header__image" src="./assets/images/icon.webp"
                     alt="website's icon, Sao Paulo's city shape in black">
                 <h1 class="header__title">Paulista Dishes</h1>
             </a>
@@ -32,6 +32,7 @@
     </header>
     <section class="introduction">
         <div class="introduction__image">
+            <img src="./assets/images/beef-stew.webp" alt="A beef stew dish" class="introduction__photo">
             <div class="introduction__subtitle">
                 <h2 class="introduction__text">Discover São Paulo, the vibrant metropolis renowned for its rich culinary
                     heritage and iconic
@@ -84,7 +85,7 @@
             <li class="top-foods__item">
                 <a href="./recipes.html#coxinha">
                     <figure class="top-foods__figure">
-                        <img src="./assets/images/coxinha.jpg" alt="A coxinha on a chopping board"
+                        <img src="./assets/images/coxinha.webp" alt="A coxinha on a chopping board"
                             class="top-foods__photo">
                         <figcaption class="top-foods__subtitle">Coxinha</figcaption>
                     </figure>
@@ -93,7 +94,7 @@
             <li class="top-foods__item">
                 <a href="./recipes.html#feijoada">
                     <figure class="top-foods__figure">
-                        <img src="./assets/images/feijoada.jpg"
+                        <img src="./assets/images/feijoada.webp"
                             alt="A feijoada (bean stew) inside of a bow with a dish with rice at the back"
                             class="top-foods__photo">
                         <figcaption class="top-foods__subtitle">Feijoada</figcaption>
@@ -103,7 +104,7 @@
             <li class="top-foods__item">
                 <a href="./recipes.html#pastel">
                     <figure class="top-foods__figure">
-                        <img src="./assets/images/pastel.jpg"
+                        <img src="./assets/images/pastel.webp"
                             alt="A few pastels in a plate with a sause bow in the midle" class="top-foods__photo">
                         <figcaption class="top-foods__subtitle">Pastel</figcaption>
                     </figure>
@@ -112,7 +113,7 @@
             <li class="top-foods__item">
                 <a href="./recipes.html#mortadella-sandwich">
                     <figure class="top-foods__figure">
-                        <img src="./assets/images/mortadella-sandwich.jpg"
+                        <img src="./assets/images/mortadella-sandwich.webp"
                             alt="A mortadella sandwich on a chopping board with a knife close to it"
                             class="top-foods__photo">
                         <figcaption class="top-foods__subtitle">Mortadella Sandwich</figcaption>
