--- a/recipes.html
+++ b/recipes.html
@@ -17,7 +17,7 @@
     <header class="header">
         <div class="header__logo">
             <a href="index.html" class="header__home">
-                <img class="header__image" src="./assets/images/icon.png"
+                <img class="header__image" src="./assets/images/icon.webp"
                     alt="website's icon, Sao Paulo's city shape in black">
                 <h1 class="header__title">Paulista Dishes</h1>
             </a>
@@ -55,7 +55,7 @@
         <div class="recipes__recipe" id="coxinha">
             <h2 class="recipes__title2">Coxinha</h2>
             <div class="recipes__container">
-                <img src="./assets/images/coxinha.jpg"
+                <img src="./assets/images/coxinha.webp"
                     alt="A feijoada (bean stew) inside of a bow with a dish with rice at the back"
                     class="recipes__photo">
                 <div class="recipes__ingredients">
@@ -119,7 +119,7 @@
         <div class="recipes__recipe" id="feijoada">
             <h2 class="recipes__title2">Feijoada</h2>
             <div class="recipes__container">
-                <img src="./assets/images/feijoada.jpg"
+                <img src="./assets/images/feijoada.webp"
                     alt="A feijoada (bean stew) inside of a bow with a dish with rice at the back"
                     class="recipes__photo">
                 <div class="recipes__ingredients">
@@ -195,7 +195,7 @@
         <div class="recipes__recipe" id="pastel">
             <h2 class="recipes__title2">Pastel</h2>
             <div class="recipes__container">
-                <img src="./assets/images/pastel.jpg"
+                <img src="./assets/images/pastel.webp"
                     alt="A feijoada (bean stew) inside of a bow with a dish with rice at the back"
                     class="recipes__photo">
                 <div class="recipes__ingredients">
@@ -259,7 +259,7 @@
         <div class="recipes__recipe" id="mortadella-sandwich">
             <h2 class="recipes__title2">Mortadella Sandwich</h2>
             <div class="recipes__container">
-                <img src="./assets/images/mortadella-sandwich.jpg"
+                <img src="./assets/images/mortadella-sandwich.webp"
                     alt="A feijoada (bean stew) inside of a bow with a dish with rice at the back"
                     class="recipes__photo">
                 <div class="recipes__ingredients">
