--- a/contact.html
+++ b/contact.html
@@ -36,7 +36,7 @@
 
     <section class="contact">
         <div class="contact__container">
-            <h1>We are always looking for new recipes and restaurants!</h1>
+            <h2>We are always looking for new recipes and restaurants!</h2>
             <p>Would you like to recommend something? Please enter in contact with us using the following form:</p>
 
             <form method="post" action="https://formdump.codeinstitute.net/" class="contact__form">
@@ -56,6 +56,7 @@
                     (recipe/restaurant):</label>
                 <br>
                 <select id="recommendationType" name="recommendationType" required>
+                    <option value="" disabled selected>Select an option</option>
                     <option value="recipe">Recipe</option>
                     <option value="restaurant">Restaurant</option>
                 </select><br><br>
