Add videos to the recipes with style

--- a/recipes.html
+++ b/recipes.html
@@ -114,6 +114,10 @@
                         </li>
                     </ol>
                 </div>
+                <iframe class="recipes__video" src="https://www.youtube.com/embed/70XsMIeazno"
+                    title="Brazilian Chicken Croquettes (Coxinha)" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    allowfullscreen></iframe>
             </div>
         </div>
 
@@ -190,6 +194,10 @@
                         </li>
                     </ol>
                 </div>
+                <iframe class="recipes__video" src="https://www.youtube.com/embed/auzJ4qLftBw"
+                    title="Brazilian Feijoada - Black Bean &amp; Pork Stew Recipe" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    allowfullscreen></iframe>
             </div>
         </div>
 
@@ -254,6 +262,10 @@
                         </li>
                     </ol>
                 </div>
+                <iframe class="recipes__video" src="https://www.youtube.com/embed/qhsZCKZR5-4"
+                    title="Brazilian Pastel - Easy Meat Pie Recipe" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    allowfullscreen></iframe>
             </div>
         </div>
 
@@ -305,6 +317,10 @@
                         </li>
                     </ol>
                 </div>
+                <iframe class="recipes__video" src="https://www.youtube.com/embed/NAW2tObyK8s"
+                    title="Fried mortadella sandwiches | Gourmet Traveller" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    allowfullscreen></iframe>
             </div>
         </div>
 
