remove frameborder from 4 videos

--- a/recipes.html
+++ b/recipes.html
@@ -115,7 +115,7 @@
                     </ol>
                 </div>
                 <iframe class="recipes__video" src="https://www.youtube.com/embed/70XsMIeazno"
-                    title="Brazilian Chicken Croquettes (Coxinha)" frameborder="0"
+                    title="Brazilian Chicken Croquettes (Coxinha)"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                     allowfullscreen></iframe>
             </div>
@@ -195,7 +195,7 @@
                     </ol>
                 </div>
                 <iframe class="recipes__video" src="https://www.youtube.com/embed/auzJ4qLftBw"
-                    title="Brazilian Feijoada - Black Bean &amp; Pork Stew Recipe" frameborder="0"
+                    title="Brazilian Feijoada - Black Bean &amp; Pork Stew Recipe"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                     allowfullscreen></iframe>
             </div>
@@ -263,7 +263,7 @@
                     </ol>
                 </div>
                 <iframe class="recipes__video" src="https://www.youtube.com/embed/qhsZCKZR5-4"
-                    title="Brazilian Pastel - Easy Meat Pie Recipe" frameborder="0"
+                    title="Brazilian Pastel - Easy Meat Pie Recipe"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                     allowfullscreen></iframe>
             </div>
@@ -318,7 +318,7 @@
                     </ol>
                 </div>
                 <iframe class="recipes__video" src="https://www.youtube.com/embed/NAW2tObyK8s"
-                    title="Fried mortadella sandwiches | Gourmet Traveller" frameborder="0"
+                    title="Fried mortadella sandwiches | Gourmet Traveller"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                     allowfullscreen></iframe>
             </div>
