--- a/recipes.html
+++ b/recipes.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 
+<!-- Head, containing all meta tags, scripts, CSS, and title for Sao Paulo's City Dishes website -->
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,7 +16,10 @@
     <title>Paulista Dishes</title>
 </head>
 
+<!-- Body content showcasing the rich flavors and culinary delights of Sao Paulo's city dishes -->
+
 <body>
+    <!-- Header with a responsive navigation menu for easy exploration of Sao Paulo's city dishes -->
     <header class="header">
         <div class="header__logo">
             <a href="index.html" class="header__home">
@@ -23,6 +28,7 @@
                 <h1 class="header__title">Paulista Dishes</h1>
             </a>
         </div>
+        <!-- Navigation menu featuring three pages: Home, Recipes, and Contact -->
         <nav class="header__menu">
             <ul class="header__items">
                 <li class="header__item"><a href="index.html" class="header__link">Home</a></li>
@@ -31,8 +37,9 @@
             </ul>
         </nav>
     </header>
-
+    <!-- Recipes section showcasing four dishes with their corresponding recipes -->
     <section class="recipes">
+        <!-- Introduction section providing an overview of the current recipe page -->
         <div class="recipes__introduction">
             <h2 class="recipes__title">Top Recipes</h2>
             <p class="recipes__text">Here, you will find an extensive collection of delicious recipes and dishes
@@ -53,6 +60,7 @@
                 family and friends.</p>
         </div>
 
+        <!-- Div dedicated to the Coxinha recipe -->
         <div class="recipes__recipe" id="coxinha">
             <h2 class="recipes__title2">Coxinha</h2>
             <div class="recipes__container">
@@ -121,6 +129,7 @@
             </div>
         </div>
 
+        <!-- Div dedicated to the Feijoada recipe -->
         <div class="recipes__recipe" id="feijoada">
             <h2 class="recipes__title2">Feijoada</h2>
             <div class="recipes__container">
@@ -201,6 +210,7 @@
             </div>
         </div>
 
+        <!-- Div dedicated to the Pastel recipe -->
         <div class="recipes__recipe" id="pastel">
             <h2 class="recipes__title2">Pastel</h2>
             <div class="recipes__container">
@@ -269,6 +279,7 @@
             </div>
         </div>
 
+        <!-- Div dedicated to the Mortadella Sandwich recipe -->
         <div class="recipes__recipe" id="mortadella-sandwich">
             <h2 class="recipes__title2">Mortadella Sandwich</h2>
             <div class="recipes__container">
@@ -326,7 +337,7 @@
 
     </section>
 
-
+    <!-- Footer featuring links to the four social media platforms -->
     <footer class="footer">
         <ul class="footer__social-medias">
             <li class="footer__social-media">
