Enhance contact.html with informative commentaries for improved code readability and documentation

--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,10 @@
     <title>Paulista Dishes</title>
 </head>
 
+<!-- Body content with the contact form -->
+
 <body>
+    <!-- Header with a responsive navigation menu for easy exploration of Sao Paulo's city dishes -->
     <header class="header">
         <div class="header__logo">
             <a href="index.html" class="header__home">
@@ -25,6 +28,7 @@
                 <h1 class="header__title">Paulista Dishes</h1>
             </a>
         </div>
+        <!-- Navigation menu featuring three pages: Home, Recipes, and Contact -->
         <nav class="header__menu">
             <ul class="header__items">
                 <li class="header__item"><a href="index.html" class="header__link">Home</a></li>
@@ -36,11 +40,12 @@
         </nav>
     </header>
 
+    <!-- Contact form section allowing users to submit their recommendations -->
     <section class="contact">
         <div class="contact__container">
             <h2>We are always looking for new recipes and restaurants!</h2>
             <p>Would you like to recommend something? Please enter in contact with us using the following form:</p>
-
+            <!-- Form utilizing the POST method and submitting data to the Code Institute formdump link -->
             <form method="post" action="https://formdump.codeinstitute.net/" class="contact__form">
                 <label for="name" class="contact__label">Name:</label>
                 <br>
@@ -75,7 +80,7 @@
         </div>
     </section>
 
-
+    <!-- Footer featuring links to the four social media platforms -->
     <footer class="footer">
         <ul class="footer__social-medias">
             <li class="footer__social-media">
