--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 
 <body>
     <header class="header">
+        <!-- Header with a responsive navigation menu for easy exploration of Sao Paulo's city dishes -->
         <div class="header__logo">
             <a href="index.html" class="header__home">
                 <img class="header__image" src="./assets/images/icon.webp"
