Enhance index.html with informative commentaries for improved code readability and documentation

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     <title>Paulista Dishes</title>
 </head>
 
+<!-- Body content for the home page of the website -->
+
 <body>
     <header class="header">
         <!-- Header with a responsive navigation menu for easy exploration of Sao Paulo's city dishes -->
@@ -44,6 +46,8 @@
             </div>
         </div>
     </section>
+
+    <!-- About section providing an informative description of the website's purpose and mission -->
     <section class="about">
         <h2 class="about__title">About Paulista Dishes</h2>
         <div class="about__box">
@@ -66,10 +70,6 @@
                 <p class="about__paragraph">Our carefully crafted recipes are a testament to the rich flavors and
                     cultural heritage of the
                     Sao Paulo region.</p>
-                <p class="about__paragraph">Not only do we provide mouthwatering recipes, but we also go the extra
-                    mile by sharing insights into
-                    the best restaurants in the area. Our authors have personally savored the culinary delights of
-                    numerous establishments, handpicking the finest dining experiences for your enjoyment.</p>
                 <p class="about__paragraph">From cozy family-owned gems to trendy hotspots, we aim to cater to all
                     tastes and preferences.</p>
                 <p class="about__paragraph">So, whether you're an adventurous home cook eager to recreate
@@ -83,6 +83,8 @@
 
         </div>
     </section>
+
+    <!-- Recipes section with four dishes -->
     <section class="top-foods">
         <h2 class="top-foods__title">Top Foods</h2>
         <ul class="top-foods__items">
@@ -129,6 +131,7 @@
 
     </section>
 
+    <!-- Footer featuring links to the four social media platforms -->
     <footer class="footer">
         <ul class="footer__social-medias">
             <li class="footer__social-media">
