--- a/recipes.html
+++ b/recipes.html
@@ -69,7 +69,7 @@
                     class="recipes__photo">
                 <div class="recipes__ingredients">
                     <h3 class="recipes__title2">Ingredients:</h3>
-                    <ul>
+                    <ul class="recipes__ingredients-list">
                         <li>2 cups cooked shredded chicken</li>
                         <li>2 tablespoons olive oil</li>
                         <li>1 small onion, finely chopped</li>
@@ -138,7 +138,7 @@
                     class="recipes__photo">
                 <div class="recipes__ingredients">
                     <h3 class="recipes__title2">Ingredients:</h3>
-                    <ul>
+                    <ul class="recipes__ingredients-list">
                         <li>450 grams dried black beans</li>
                         <li>1.9 liters water</li>
                         <li>450 grams smoked ham hocks or pork shoulder</li>
@@ -219,7 +219,7 @@
                     class="recipes__photo">
                 <div class="recipes__ingredients">
                     <h3 class="recipes__title2">Ingredients:</h3>
-                    <ul>
+                    <ul class="recipes__ingredients-list">
                         <li>250 grams all-purpose flour</li>
                         <li>1/2 teaspoon salt</li>
                         <li>120 milliliters water</li>
