Add icon to the webpage fav tab

--- a/contact.html
+++ b/contact.html
@@ -13,6 +13,7 @@
     <!-- font awesome script  -->
     <script src="https://kit.fontawesome.com/c7dbda0798.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="icon" type="image/x-icon" href="./assets/images/favicon.ico">
     <title>Paulista Dishes</title>
 </head>
 
